# WSJT-X

./: .gitattributes  .gitignore  Announce.txt  Audio.f90  AudioDevice.cpp  AudioDevice.hpp  Bands.cpp  Bands.hpp  CALL3.TXT  CMakeCPackOptions.cmake.in  CMakeLists.txt  CMakeLists.txt.console  CallsignValidator.hpp  CandidateKeyFilter.cpp  CandidateKeyFilter.hpp  ConfigTest.cpp  Configuration.cpp  Configuration.hpp  Configuration.ui  Copyright.txt  DFINC.MAK  DXLabSuiteCommanderTransceiver.cpp  DXLabSuiteCommanderTransceiver.hpp  DecodeHighlightingListView.cpp  DecodeHighlightingModel.cpp  DecodeHighlightingModel.hpp  Detector.cpp  Detector.hpp  DisplayManual.cpp  DisplayManual.hpp  DoubleClickablePushButton.hpp  EmulateSplitTransceiver.cpp  EmulateSplitTransceiver.hpp  EqualizationToolsDialog.cpp  EqualizationToolsDialog.hpp  ExceptionCatchingApplication.hpp  ExchangeValidator.cpp  ExchangeValidator.hpp  ExportCabrillo.cpp  ExportCabrillo.h  (+504 more)
bundle_fixup/: CMakeLists.txt
doc/: CMakeLists.txt  README  build-doc.sh  building on MS Windows.txt  building portaudio on Windows with ASIO support.txt  building-Boost-libs.txt  go  wsjtx.conf.in
doc/common/: communication.adoc  license.adoc  links.adoc
doc/design/: DecoderRefactor.puml  JT9ReceiveDatapath.puml
doc/source/: acknowledgements.adoc  acknowledgements.txt  app-a-functional-procedures.txt  app-a-jt9-mode-table.txt  app-a-rcv-decode.txt  app-a-transmitting.txt  app-a.txt  app-b-installed-files.txt  app-b-runtime-files.txt  app-c.txt  compiling.adoc  configuration-band-settings.adoc  configuration-band-settings.txt  configuration-main-window.adoc  configuration-main-window.txt  configuration-station.adoc  configuration-station.txt  configuration-txmacros.adoc  configuration-txmacros.txt  controls-functions-center.adoc  controls-functions-center.txt  controls-functions-kb-shortcuts.adoc  controls-functions-kb-shortcuts.txt  controls-functions-left.adoc  controls-functions-left.txt  controls-functions-main-window.adoc  controls-functions-main-window.txt  controls-functions-menus.adoc  controls-functions-messages.adoc  controls-functions-messages.txt  controls-functions-special-mouse-cmds.adoc  controls-functions-status-bar.adoc  controls-functions-wide-graph.adoc  controls-functions-wide-graph.txt  controls-functions.txt  example1-decoding-controls.txt  example1-decoding-overview.adoc  example1-decoding-overview.txt  example2-check-decodes.adoc  example2-check-decodes.txt  (+51 more)
doc/user_guide/: acknowledgements.adoc  command-reference.adoc  config-details.adoc  controls-functions-center.adoc  controls-functions-left.adoc  controls-functions-main-window.adoc  controls-functions-menus.adoc  controls-functions-messages.adoc  controls-functions-status-bar.adoc  controls-functions-wide-graph.adoc  coop-prgrms.adoc  cooperating-programs.adoc  docinfo.html  faq.adoc  implementation.adoc  install-from-source.adoc  install-linux.adoc  install-mac.adoc  install-windows.adoc  introduction.adoc  jt65-jt9-differences.adoc  jt65-protocol.adoc  jt9-protocol.adoc  logging.adoc  make-qso.adoc  new_features.adoc  platform-dependencies.adoc  protocols.adoc  rig-config-adat.adoc  rig-config-aor.adoc  rig-config-drake.adoc  rig-config-elecraft.adoc  rig-config-flexrad.adoc  rig-config-kenwood.adoc  rig-config-main.adoc  rig-config-softrock.adoc  rig-config-template.adoc  rig-config-tentec.adoc  rig-config-yaesu.adoc  settings-audio.adoc  (+20 more)
lib/: .fst240_decode.f90.swp  CMakeLists.txt  CQnnnCAT.txt  C_interface_module.f90  DXped_Operations.txt  DXped_pseudo_code.txt  JTMSKcode.f90  JTMSKfer.f90  JTMSKsim.f90  JTMSKsim144.f90  Makefile  Makefile.MinGW  Makefile.MinGW.qt4  Makefile.jt65  Makefile.jt65.win  Makefile.jt65_Win  Makefile.jt65_osx  Makefile.jt9w  Makefile.jt9w_Win  Makefile.jtmsk  Makefile.jtsdk  Makefile.linux  Makefile.msk  Makefile.mskWin  addit.f90  afc65b.f90  afc9.f90  allsim.f90  ana64.f90  ana932.f90  analytic.f90  astro.f90  astro0.f90  astrosub.f90  avecho.f90  averms.f90  avg4.f90  azdist.f90  baddata.f90  badmsg.f90  (+402 more)
lib/77bit/: 77bit.txt  CQ_messages.txt  NewCode.txt  New_Features_WSJT-X_2.0.txt  all28.txt  arrl_sec.txt  call_to_c28.f90  calls.txt  calls1.txt  calls2.txt  calls3.txt  chk77_01.f90  chk77_03.f90  chk77_1.f90  chk77_2.f90  chk77_3.f90  encode77.f90  encode77.out  exch_valid.f90  fmtmsg77.f90  free_text.f90  g2  g5  g8  hash10.f90  hash12.f90  hash13.f90  hash22.f90  hash24.f90  hashcalls.txt  ihashcall.f90  messages.txt  messages_2.txt  msgtypes.txt  msgtypes.txt.0  nonstd_to_c58.f90  pack28.f90  pack77.f90  pack77_01.f90  pack77_02.f90  (+20 more)
lib/fsk4hf/: Makefile  Makefile.win  baseline.f90  bitflip128_90.f90  bpdecode120.f90  bpdecode168.f90  bpdecode174.f90  bpdecode174_101.f90  bpdecode174_74.f90  bpdecode174_91.f90  bpdecode174b.f90  bpdecode204.f90  bpdecode300.f90  chkcrc10.f90  chkcrc12.f90  chkcrc12a.f90  costasxcorr.m  cpolyfit.f90  cpolyfitw.f90  dbpsksim.f90  decode174_101.f90  decode174_74.f90  decode240_101.f90  (+142 more)
libm65/: CMakeLists.txt  JT65code.f90  Makefile  Makefile.MinGW  Makefile.jtsdk  Makefile.linux  afc65b.f  afc65b.f90  alignmsg.f90  analytic.f90  astro.f  astro.f90  astro0.f90  astrosub.f90  averms.f90  ccf2.f  ccf65.f90  cgen65.f90  chkhist.f  chkmsg.f  coord.f  dcoord.f  decode0.f90  decode1a.f  decode1a.f90  decode65b.f  decode65b.f90  decode9.f90  decode_rs.c  decodemsk.f90  deep65.f90  deg2grid.f  demod64a.f  demod64a.f90  display.f90  dot.f  dpol.f90  encode65.f  encode65.f90  extract.F  (+126 more)
manpages/: CMakeLists.txt
map65/: CMakeLists.txt  MAP65_Beta_Release.docx  about.cpp  about.h  about.ui  astro.cpp  astro.h  astro.ui  bandmap.cpp  bandmap.h  bandmap.ui  commons.h  devsetup.cpp  devsetup.h  devsetup.ui  displaytext.cpp  displaytext.h  ffft.f  ft2000_freq.sh  getdev.cpp  getfile.cpp  getfile.h  killbyname.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map65.pro  map65.rc  map65_config.h.in  map65b.iss  messages.cpp  messages.h  messages.ui  meterwidget.cpp  meterwidget.h  paInputDevice.c  pa_get_device_info.c  plotter.cpp  plotter.h  (+16 more)
tests/: CMakeLists.txt  test_qt_helpers.cpp
(+866 files in other folders)
